--- a/style/register.css
+++ b/style/register.css
@@ -271,7 +271,7 @@ header {
         left: 15px;
     }
 
-    #password,
+    #register_password,
     #register_name,
     #login_password,
     #register_email {
