--- a/style/register.css
+++ b/style/register.css
@@ -5,6 +5,11 @@ body {
     font-family: 'Inter' !important;
 }
 
+#warning-email {
+        color: var(--color-red);
+        font-size: 16px;
+}
+
 .form {
     display: flex !important;
     flex-direction: column;
@@ -67,6 +72,7 @@ body {
 
 #register_name {
     background-image: url('../img/user.svg');
+    background-position: center right -4px;
 }
 
 input {
