--- a/style/log-in.css
+++ b/style/log-in.css
@@ -7,7 +7,7 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
 }
-
+/* -------------------------------------------------OK!------------------------------------------------- */
 form {
     display: flex;
     flex-direction: column;
@@ -43,6 +43,15 @@ input[type=password] {
     background-origin: content-box;
 }
 
+#register_password_confirm,
+#register_password,
+#register_name,
+#register_email,
+#login_password,
+#login_email {
+    font-size: 20px;
+}
+/* -------------------------------------------------OK!------------------------------------------------- */
 .button {
     background-color: var(--main-color) !important;
     color: var(--text-white) !important;
@@ -87,7 +96,6 @@ input[type=password] {
     background-color: var(--headline) !important;
 }
 
-
 .signInBtn {
     padding: 15px 16px !important;
     border-radius: 8px;
@@ -103,16 +111,10 @@ input[type=password] {
     background-color: var(--headline)
 }
 
-.sendNewPasswordBtn {
-    padding: 15px 16px !important;
-    border-radius: 8px;
-    background: #2A3647;
-    color: white;
-    border: none;
-}
-
-.sendNewPasswordBtn:hover {
-    background-color: var(--headline)
+.logInTitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .input-fields {
@@ -121,31 +123,7 @@ input[type=password] {
     flex-direction: column;
 }
 
-.input-field {
-    display: flex;
-    justify-content: space-between;
-    background-color: var(--text-white);
-    border: 1px solid var(--border-grey);
-    border-radius: 10px;
-    padding: 12px 21px;
-    width: 422px;
-    height: auto;
-}
-
-.input-field img {
-    width: 24px;
-    height: auto;
-}
-
-#register_name_container {
-    margin-top: 0 !important;
-}
-
-#login_password_container {
-    margin-top: 32px;
-}
-
-.rememberMeForgetMyPasswordContainer {
+.remember-me-container {
     display: flex !important;
     justify-content: space-between;
     align-content: center !important;
@@ -155,13 +133,7 @@ input[type=password] {
     margin: 8px 0 32px;
 }
 
-.logInTitle {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.rememberMeForgetMyPasswordContainer a {
+.remember-me-container a {
     text-decoration: none;
     color: var(--headline);
 }
@@ -177,17 +149,6 @@ input[type=password] {
     height: 16px;
     margin-right: 8px;
     cursor: pointer;
-}
-
-.checkbox a {
-    padding: 35px;
-}
-
-.buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 32px;
 }
 
 .buttonsUnderLogin {
@@ -240,15 +201,6 @@ header {
     font-weight: bold;
 }
 
-#register_password_confirm,
-#register_password,
-#register_name,
-#register_email,
-#login_password,
-#login_email {
-    font-size: 20px;
-}
-
 .logo-container {
     display: flex;
     justify-content: center;
@@ -260,6 +212,8 @@ header {
     height: 121.966px;
     flex-shrink: 0;
 }
+
+/* ----------------------------------------------------------MEDIA---------------------------------------------------------- */
 
 @media (max-width: 900px) {
     .dialog {
@@ -290,7 +244,7 @@ header {
 
     #warning-text-passwort,
     #warning-text-email {
-        font-size: 12px !important;
+        font-size: 12px;
     }
 
     .warning-field {
@@ -314,20 +268,6 @@ header {
         width: auto;
     }
 
-    .btn-dark {
-        margin-right: 0;
-        margin-left: 2%;
-    }
-
-    .checkbox a {
-        padding: 10px;
-    }
-
-    .buttons {
-        display: flex;
-        flex-direction: column;
-    }
-
     .underline {
         width: 88px;
     }
@@ -341,19 +281,14 @@ header {
     }
 
     .buttonsUnderLogin {
-        display: flex !important;
-        flex-direction: column !important;
+        display: flex;
+        flex-direction: column;
         gap: 21px;
     }
 
     .button-log-in,
     .button-guest-login {
         margin: 0 !important;
-    }
-
-    .input-field {
-        margin: 0 16px;
-        width: auto;
     }
 
     .input-fields {
@@ -376,10 +311,6 @@ header {
         height: 0;
     }
 
-    .checkbox {
-        margin: 10px;
-    }
-
     body {
         height: 100vh;
     }
@@ -390,9 +321,6 @@ header {
         padding-left: 15px;
     }
 
-    header img {
-        height: 80px;
-    }
 }
 
 @media (max-width: 393px) and (max-height: 786px) {
@@ -409,17 +337,11 @@ header {
 
 @media (max-height: 900px) {
     .dialog {
-        margin-top: 5px !important;
+        margin-top: 5px;
         padding: 32px 16px;
         width: auto;
     }
-
-    header img {
-        height: 20px;
-    }
 }
-
-
 
 @media (max-height: 768px) {
     .fontSize61 {
@@ -444,7 +366,7 @@ header {
         padding-bottom: 30px;
     }
 
-    .rememberMeForgetMyPasswordContainer {
+    .remember-me-container {
         margin: 8px 0 8px;
     }
 
