--- a/style/log-in.css
+++ b/style/log-in.css
@@ -61,6 +61,13 @@ input[type=password] {
     background-color: var(--headline) !important;
 }
 
+
+.button-log-in {
+    width: 145px !important;
+    height: 51px !important;
+    display: flex;
+}
+
 .button-log-in,
 .button-guest-login {
     height: auto !important;
@@ -77,6 +84,19 @@ input[type=password] {
     color: var(--main-color) !important;
     border: 1px solid var(--version-2-main-color, #2A3647) !important;
     margin-left: calc(35px / 2) !important;
+}
+
+/* REGISTER */
+.button-guest-login {
+    background-color: var(--text-white) !important;
+    color: var(--main-color) !important;
+    margin: 35px;
+    height: 51px !important;
+    min-width: 161 !important;
+    padding-top: 4px !important;
+    padding-right: 16px !important;
+    padding-bottom: 4px !important;
+    padding-left: 16px !important;
 }
 
 .button-guest-login:hover {
