--- a/style/register.css
+++ b/style/register.css
@@ -18,17 +18,17 @@
 }
 
 .dialog-sign-up {
-    position: relative;
     background-color: var(--text-white);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: auto;
+    height: 630px;
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04) !important;
     border-radius: 30px !important;
-    width: auto;
+    width: 600px;
     padding: 48px 88px;
+    position: relative;
 }
 
 .sign-up-underline-container {
@@ -169,13 +169,14 @@
 .d-none {
     display: none !important;
 }
-
-@media (max-width: 768px) {
+@media (max-width: 900px){
     .dialog-sign-up {
+        width: 90vw;
         padding: 32px 0;
         margin: 30px 16px 0;
-        width: auto;
     }
+}
+@media (max-width: 768px) {
 
     .fontSize61 {
         font-size: 47 !important;
@@ -214,10 +215,6 @@
         height: 100vh;
     }
 
-    /* .input-field {
-        width: auto;
-    } */
-
     header {
         padding-top: 12px;
         padding-right: 12px;
@@ -232,9 +229,6 @@
         margin-bottom: 0px;
     }
 
-    .dialog-login {
-        margin-top: 25px;
-    }
 }
 
 @media (max-height: 900px) {
