--- a/style/style.css
+++ b/style/style.css
@@ -18,9 +18,15 @@
     --active-sildebar-page: rgba(9, 25, 49, 1);
     --body-background-color: #F6F7F8;
 }
+
+.mt-24{
+    margin-top: 24px;
+}
 .mt-32{
     margin-top: 32px;
 }
+
+
 
 .blue-btn{
     background-color: var(--main-color);
