--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -12,7 +12,7 @@
         display: none;
     }
 
-    .contacts-container {
+    .contacts-list {
         max-width: 375px !important;
         min-width: 375px !important;
     }
@@ -121,7 +121,7 @@
         min-width: 352px !important;
     }
 
-    .contacts-container {
+    .contacts-list {
         width: auto;
         min-width: 230px;
         max-width: 230px;
@@ -185,7 +185,7 @@
         margin-top: 80px !important;
     }
 
-    .contacts-container {
+    .contacts-list {
         width: 100% !important;
         min-width: 100vw !important;
         max-width: 100vw !important;
