--- a/style/contacts.css
+++ b/style/contacts.css
@@ -77,7 +77,7 @@ body {
     box-shadow: none !important;
 }
 
-.contacts-container {
+.contacts-list {
     top: 300px;
     width: 456px;
     min-width: 456px;
@@ -88,6 +88,36 @@ body {
     align-items: center;
     background: #FFF;
     overflow-y: scroll;
+}
+
+/* scroll-bar contacts */
+.contacts-list::-webkit-scrollbar-button:start:decrement {
+    background-position: center !important;
+    background-image: url('../img/arrow_drop_up.svg') !important;
+    border-top-right-radius: 100% !important;
+    border-top-left-radius: 100% !important;
+}
+
+.contacts-list::-webkit-scrollbar-button:end:increment {
+    background-position: center !important;
+    background-image: url('../img/arrow_drop_downaa.svg') !important;
+    border-bottom-right-radius: 100% !important;
+    border-bottom-left-radius: 100% !important;
+}
+
+.contacts-list::-webkit-scrollbar {
+    display: block !important;
+    width: 8px !important;
+    padding: 20px 0 !important;
+}
+
+.contacts-list::-webkit-scrollbar-track {
+    background-color: transparent !important;
+}
+
+.contacts-list::-webkit-scrollbar-thumb {
+    background-color: #909090 !important;
+    border-radius: 10px;
 }
 
 .emptyContainer {
