--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -12,7 +12,7 @@
         display: none;
     }
 
-    .contacts-list {
+    .left-container {
         max-width: 375px !important;
         min-width: 375px !important;
     }
@@ -121,7 +121,7 @@
         min-width: 352px !important;
     }
 
-    .contacts-list {
+    .left-container {
         width: auto;
         min-width: 230px;
         max-width: 230px;
@@ -185,7 +185,7 @@
         margin-top: 80px !important;
     }
 
-    .contacts-list {
+    .left-container {
         width: 100% !important;
         min-width: 100vw !important;
         max-width: 100vw !important;
@@ -367,15 +367,15 @@
 }
 
 @media (max-height: 1150px) {
-    #joinLogoAddContactId {
+    /* #joinLogoAddContactId {
         display: none;
-    }
+    } */
 }
 
 @media (max-height: 860px) and (min-width: 769px) {
-    #joinLogoAddContactId {
+    /* #joinLogoAddContactId {
         display: none;
-    }
+    } */
 
     .contactInfoTextBlock {
         height: auto;
