--- a/style/contacts.css
+++ b/style/contacts.css
@@ -20,7 +20,7 @@ body {
     margin-left: 30px;
 }
 
-#contactsId {
+#contact_list {
     height: calc(100vh - 160px);
 }
 
@@ -138,7 +138,9 @@ body {
     background: #F2F2F2;
 }
 
-.firstLetterOverContact {
+.initial{
+    display: flex;
+    align-items: center;
     width: 352px;
     padding: 17px 36px !important;
     height: 58px;
@@ -217,6 +219,8 @@ body {
 }
 
 .contactsTitle {
+    display: flex;
+    align-items: center;
     gap: 30px;
     height: 73px;
     margin-bottom: 32px;
@@ -257,7 +261,7 @@ body {
 }
 
 .phoneNumber {
-    color: black !important;
+    color: black;
 }
 
 .phoneText {
