--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -29,18 +29,19 @@
         flex-direction: column !important;
         align-items: center;
         height: calc(100vh - 20px) !important;
-        width: 592px !important;
+        width: 600px !important;
     }
 
     .leftSideAddContactPopup {
         border-top-right-radius: 30px !important;
         border-bottom-left-radius: 0 !important;
         height: calc(100vh * 0.4) !important;
-        width: 592px !important;
+        width: 600px !important;
         padding: 66px 24px !important;
     }
 
     .rightSidePopup {
+        padding: 0px 24px 66px 24px;
         flex-direction: column;
         align-items: center !important;
         justify-content: center !important;
@@ -48,16 +49,8 @@
         height: calc(100vh * 0.6) !important;
     }
 
-    .profilePictureArea {
-        position: absolute !important;
-    }
-
-    .circle {
-        margin-top: -60px !important;
-    }
-
-    .personInCircle {
-        top: 0px;
+    #img_container {
+       margin-top: -60px;
     }
 
     .contactInfo {
@@ -81,7 +74,7 @@
     .inputName input,
     .register_email_container input,
     .inputPhone input {
-        width: calc(592px - 64px) !important;
+        width: calc(600px - 64px) !important;
         height: calc(26px + 15px) !important;
     }
 
@@ -92,7 +85,7 @@
     .closePopupCross {
         position: absolute;
         top: calc(0px - (100vh * 0.4) + 24px) !important;
-        right: 32px !important;
+        right: 16px !important;
     }
 
     .cancelBtn,
@@ -125,18 +118,6 @@
         width: auto;
         min-width: 230px;
         max-width: 230px;
-    }
-
-    .fontSize61 {
-        font-size: 42px !important;
-    }
-
-    .fontSize47 {
-        font-size: 36px !important;
-    }
-
-    .fontSize27 {
-        font-size: 16px !important;
     }
 }
 
@@ -267,18 +248,6 @@
         margin: 0 !important;
     }
 
-    .fontSize61 {
-        font-size: 47px !important;
-    }
-
-    .fontSize27 {
-        font-size: 20px !important;
-    }
-
-    .fontSize47 {
-        font-size: 36px !important;
-    }
-
     #blueLineId {
         margin-top: 8px;
         font-size: 0 !important;
@@ -318,10 +287,6 @@
         margin: 32px 16px 32px !important;
     }
 
-    .fontSize47 {
-        font-size: 24px !important;
-    }
-
     .profilePictureBig {
         width: 60px !important;
         height: 60px !important
@@ -345,14 +310,6 @@
         align-items: start !important;
     }
 
-    .fontSize61 {
-        font-size: 32px !important;
-    }
-
-    .fontSize27 {
-        font-size: 16px !important;
-    }
-
     .contactsInfo {
         display: flex;
         flex-direction: column !important;
@@ -366,15 +323,11 @@
 }
 
 @media (max-height: 1150px) {
-    /* #joinLogoAddContactId {
-        display: none;
-    } */
+
 }
 
 @media (max-height: 860px) and (min-width: 769px) {
-    /* #joinLogoAddContactId {
-        display: none;
-    } */
+ 
 
     .contactInfoTextBlock {
         height: auto;
