--- a/style/contacts-media-query.css
+++ b/style/contacts-media-query.css
@@ -22,7 +22,7 @@
         align-items: flex-start !important;
     }
 
-    #img_container {
+    .center-popup {
         margin-left: 46px;
         margin-right: 46px;
     }
@@ -61,7 +61,7 @@
         height: calc(100vh * 0.6) !important;
     }
 
-    #img_container {
+    .center-popup {
        margin-top: -60px;
        margin-bottom: 0px;
     }
@@ -285,10 +285,11 @@
 }
 
 @media (max-width: 374px) {
+    .profile-edit-img,
     .circle {
         width: 70px;
         height: 70px;
-        margin-top: -35px !important;
+        /* margin-top: -35px !important; */
     }
 
     .personInCircle {
